content-container height + overflow-x fixed

--- a/sass/_content-images.scss
+++ b/sass/_content-images.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 450px;
+    height: 295px;
     //background-color: rgba( 255, 0, 0, 0.2 );
     display: none;
     margin-top: -200px;
@@ -28,14 +28,12 @@
 
 @media only screen and (min-width: 600px) {
     .content-bg-imgs-container {
-        height: 500px;
         margin-top: -200px;
     }  
 }
 
 @media only screen and (min-width: 768px) {
     .content-bg-imgs-container {
-        height: 512px;
         margin-top: -0px;
     }
 }
