--- a/sass/_scroll-component.scss
+++ b/sass/_scroll-component.scss
@@ -12,6 +12,7 @@ $slide-tyint-col: #0e161f;
     //overflow-x: hidden
     //margin-bottom: -1200px;
     z-index: 9999;
+    overflow: hidden;
     
 }
 
